einstellung_derive/src/snapshots/einstellung_derive__test__output_generic_config.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct GenericConfig<T> {
    value: T,
}

/// --- output ---
::core::compile_error! {
    "generic Config structs are not supported"
}
