einstellung_derive/src/snapshots/einstellung_derive__test__output_invalid_custom_merge_path.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config(merge(function = "123 invalid path"))]
    host: String,
}

/// --- output ---
::core::compile_error! {
    "Invalid merge function path: expected identifier"
}
