einstellung_derive/src/snapshots/einstellung_derive__test__output_invalid_item_enum.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
enum ServerConfig {
    Active,
    Inactive,
}

/// --- output ---
::core::compile_error! {
    "Unsupported shape `enum`. Expected struct with named fields."
}
