einstellung_derive/src/snapshots/einstellung_derive__test__output_invalid_item_unit_struct.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig;

/// --- output ---
::core::compile_error! {
    "Unsupported shape `no fields`. Expected named fields."
}
