einstellung_derive/src/snapshots/einstellung_derive__test__output_invalid_merge_subconfig.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    host: String,
    port: u16,
    #[config(merge = "subconfig")]
    is_active: bool,
}

/// --- output ---
::core::compile_error! {
    "Unknown value: `subconfig`. Available values: `extend`, `function`, `replace`"
}
