einstellung_derive/src/snapshots/einstellung_derive__test__output_kitchen_sink.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- helper ---
fn validate_system_port(
    _: &u16,
) -> Result<(), Box<dyn std::error::Error + Send + Sync>> {
    Ok(())
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct FullSystemConfig {
    #[config(serde(rename = "sys_name"))]
    #[config(default = ||"production".to_string())]
    name: String,
    #[config(validate = "validate_system_port")]
    port: u16,
    #[config(subconfig)]
    database: DatabaseConfig,
    #[config(merge = "extend")]
    #[config(serde(alias = "files"))]
    log_files: Vec<String>,
    #[config(merge = "extend")]
    users: std::collections::HashSet<String>,
    #[config(subconfig)]
    optional_cache: Option<CacheConfig>,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct FullSystemConfigPartial {
    #[serde(rename = "sys_name")]
    name: ::core::option::Option<String>,
    port: ::core::option::Option<u16>,
    database: ::core::option::Option<<DatabaseConfig as ::einstellung::Config>::Partial>,
    #[serde(alias = "files")]
    log_files: ::core::option::Option<Vec<String>>,
    users: ::core::option::Option<std::collections::HashSet<String>>,
    optional_cache: ::core::option::Option<
        <CacheConfig as ::einstellung::Config>::Partial,
    >,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for FullSystemConfigPartial {
    type Complete = FullSystemConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            name: next.name.or(self.name),
            port: next.port.or(self.port),
            database: match (self.database, next.database) {
                (Some(a), Some(b)) => {
                    Some(
                        ::einstellung::merge_with_context(
                            a,
                            b,
                            "FullSystemConfig",
                            "database",
                        )?,
                    )
                }
                (a, b) => a.or(b),
            },
            log_files: match (self.log_files, next.log_files) {
                (Some(mut a), Some(b)) => {
                    ::core::iter::Extend::extend(&mut a, b);
                    Some(a)
                }
                (a, b) => a.or(b),
            },
            users: match (self.users, next.users) {
                (Some(mut a), Some(b)) => {
                    ::core::iter::Extend::extend(&mut a, b);
                    Some(a)
                }
                (a, b) => a.or(b),
            },
            optional_cache: match (self.optional_cache, next.optional_cache) {
                (Some(a), Some(b)) => {
                    Some(
                        ::einstellung::merge_with_context(
                            a,
                            b,
                            "FullSystemConfig",
                            "optional_cache",
                        )?,
                    )
                }
                (a, b) => a.or(b),
            },
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(FullSystemConfig {
            name: self.name.unwrap_or_else(|| "production".to_string()),
            port: {
                let port: u16 = self
                    .port
                    .ok_or(
                        ::einstellung::ConfigError::MissingField(
                            ::einstellung::FieldPath::new("FullSystemConfig", "port"),
                        ),
                    )?;
                let validator = validate_system_port;
                if let Err(e) = validator(&port) {
                    return Err(::einstellung::ConfigError::Validation {
                        field: ::einstellung::FieldPath::new("FullSystemConfig", "port"),
                        reason: ::einstellung::into_box_error(e),
                    });
                }
                port
            },
            database: self
                .database
                .map(|x| ::einstellung::build_with_context(
                    x,
                    "FullSystemConfig",
                    "database",
                ))
                .transpose()?
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("FullSystemConfig", "database"),
                    ),
                )?,
            log_files: self
                .log_files
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("FullSystemConfig", "log_files"),
                    ),
                )?,
            users: self
                .users
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("FullSystemConfig", "users"),
                    ),
                )?,
            optional_cache: self
                .optional_cache
                .map(|x| ::einstellung::build_with_context(
                    x,
                    "FullSystemConfig",
                    "optional_cache",
                ))
                .transpose()?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.name).is_some() {
            fields.push(::std::string::String::from("sys_name"));
        }
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        if let ::core::option::Option::Some(value) = (&self.database).as_ref() {
            fields.push(::std::string::String::from("database"));
            for nested in ::einstellung::PartialConfig::provided_fields(value) {
                fields.push(::std::format!("{}.{}", "database", nested));
            }
        }
        if (&self.log_files).is_some() {
            fields.push(::std::string::String::from("log_files"));
        }
        if (&self.users).is_some() {
            fields.push(::std::string::String::from("users"));
        }
        if let ::core::option::Option::Some(value) = (&self.optional_cache).as_ref() {
            fields.push(::std::string::String::from("optional_cache"));
            for nested in ::einstellung::PartialConfig::provided_fields(value) {
                fields.push(::std::format!("{}.{}", "optional_cache", nested));
            }
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.name).is_none() {
            fields.push(::std::string::String::from("sys_name"));
        }
        if let ::core::option::Option::Some(value) = (&self.database).as_ref() {
            for nested in ::einstellung::PartialConfig::defaulted_fields(value) {
                fields.push(::std::format!("{}.{}", "database", nested));
            }
        }
        if let ::core::option::Option::Some(value) = (&self.optional_cache).as_ref() {
            for nested in ::einstellung::PartialConfig::defaulted_fields(value) {
                fields.push(::std::format!("{}.{}", "optional_cache", nested));
            }
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for FullSystemConfig {
    type Partial = FullSystemConfigPartial;
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct DatabaseConfig {
    url: String,
    #[config(default = 5432)]
    port: u16,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct DatabaseConfigPartial {
    url: ::core::option::Option<String>,
    port: ::core::option::Option<u16>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for DatabaseConfigPartial {
    type Complete = DatabaseConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            url: next.url.or(self.url),
            port: next.port.or(self.port),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(DatabaseConfig {
            url: self
                .url
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("DatabaseConfig", "url"),
                    ),
                )?,
            port: self.port.unwrap_or(5432),
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.url).is_some() {
            fields.push(::std::string::String::from("url"));
        }
        if (&self.port).is_some() {
            fields.push(::std::string::String::from("port"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.port).is_none() {
            fields.push(::std::string::String::from("port"));
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for DatabaseConfig {
    type Partial = DatabaseConfigPartial;
}

// ---------------------------------

/// --- input ---
#[derive(Config)]
struct CacheConfig {
    #[config(default = 1024)]
    size_mb: u32,
}

/// --- output ---
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct CacheConfigPartial {
    size_mb: ::core::option::Option<u32>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for CacheConfigPartial {
    type Complete = CacheConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            size_mb: next.size_mb.or(self.size_mb),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(CacheConfig {
            size_mb: self.size_mb.unwrap_or(1024),
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.size_mb).is_some() {
            fields.push(::std::string::String::from("size_mb"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.size_mb).is_none() {
            fields.push(::std::string::String::from("size_mb"));
        }
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for CacheConfig {
    type Partial = CacheConfigPartial;
}
