einstellung_derive/src/snapshots/einstellung_derive__test__output_malformed_config_attribute.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    #[config = "this should be a list"]
    host: String,
}

/// --- output ---
::core::compile_error! {
    "Name-value arguments are not supported. Use #[config(...)]"
}
