einstellung_derive/src/snapshots/einstellung_derive__test__output_merge_strategies.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct LoggerConfig {
    level: String,
    #[config(merge = "extend")]
    log_files: Vec<String>,
    #[config(merge = "replace")]
    output_format: String,
}

/// --- output ---
///Partial configuration for the `LoggerConfig` type.
#[derive(::core::default::Default, ::einstellung::serde::Deserialize)]
#[serde(crate = "::einstellung::serde")]
struct LoggerConfigPartial {
    ///Partial value for the `level` configuration field.
    level: ::core::option::Option<String>,
    ///Partial value for the `log_files` configuration field.
    log_files: ::core::option::Option<Vec<String>>,
    ///Partial value for the `output_format` configuration field.
    output_format: ::core::option::Option<String>,
}
#[automatically_derived]
impl ::einstellung::PartialConfig for LoggerConfigPartial {
    type Complete = LoggerConfig;
    fn merge(
        self,
        next: Self,
    ) -> ::core::result::Result<Self, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(Self {
            level: next.level.or(self.level),
            log_files: match (self.log_files, next.log_files) {
                (Some(mut a), Some(b)) => {
                    ::core::iter::Extend::extend(&mut a, b);
                    Some(a)
                }
                (a, b) => a.or(b),
            },
            output_format: next.output_format.or(self.output_format),
        })
    }
    fn build(
        self,
    ) -> ::core::result::Result<Self::Complete, ::einstellung::ConfigError> {
        ::core::result::Result::Ok(LoggerConfig {
            level: self
                .level
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("LoggerConfig", "level"),
                    ),
                )?,
            log_files: self
                .log_files
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("LoggerConfig", "log_files"),
                    ),
                )?,
            output_format: self
                .output_format
                .ok_or(
                    ::einstellung::ConfigError::MissingField(
                        ::einstellung::FieldPath::new("LoggerConfig", "output_format"),
                    ),
                )?,
        })
    }
    fn provided_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let mut fields = ::std::vec::Vec::new();
        if (&self.level).is_some() {
            fields.push(::std::string::String::from("level"));
        }
        if (&self.log_files).is_some() {
            fields.push(::std::string::String::from("log_files"));
        }
        if (&self.output_format).is_some() {
            fields.push(::std::string::String::from("output_format"));
        }
        fields
    }
    fn defaulted_fields(&self) -> ::std::vec::Vec<::std::string::String> {
        let fields = ::std::vec::Vec::new();
        fields
    }
}
#[automatically_derived]
impl ::einstellung::Config for LoggerConfig {
    type Partial = LoggerConfigPartial;
}
