einstellung_derive/src/snapshots/einstellung_derive__test__output_missing_subconfig_derive.snap
---
source: einstellung_derive/src/test.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct AppConfig {
    #[config(subconfig)]
    db: UnconfiguredDatabase,
}
struct UnconfiguredDatabase {
    url: String,
}

/// --- output ---
::core::compile_error! {
    "unexpected token"
}
